ensure comment author and title do not wrap with comment body

--- a/client/views/commentary/commentary.import.less
+++ b/client/views/commentary/commentary.import.less
@@ -1,7 +1,6 @@
 header {
   .active-comment-meta {
     margin-top: 5px;
-
     h3 {
       display: inline-block;
       vertical-align: top;
@@ -15,11 +14,8 @@ header {
       font-size: 20px;
       padding: 0 10px;
       margin: 0;
-
     }
-
   }
-
 }
 
 .commentary-index .comm-button .go-to-commentary {
@@ -361,6 +357,7 @@ article.lemma-comment {
     display: block;
     width: 90%;
     margin: 0 auto;
+		clear:both;
   }
 
   .comment-upper {
